@@ -259,7 +259,12 @@
     <!-- ================ Usage Subsection ================================ -->
     <sect2 id="accercicer-global-hotkeys">
       <title>Global Hotkey functions</title>
-      <para>&app; provides a few global hotkeys in it's core functionality:</para>
+      <para>&app; provides a few global hotkeys in it's core
+      functionality:</para>
+      <tip>
+        <para>You could configure the hotkeys to different bindings, see:
+          <xref linkend="accerciser-hotkey-config"/></para>
+      </tip>
       <itemizedlist> 
         <listitem> 
           <para><xref linkend="accerciser-tree-select"/></para> 
@@ -291,10 +296,6 @@
           </keycombo>.
         </para>
       </sect3>
-      <tip>
-        <para>You could configure the hotkeys to different bindings, see:
-          <xref linkend="accerciser-hotkey-config"/></para>
-      </tip>
     </sect2>
   </sect1>
 
