@@ -1,4 +1,5 @@
 [encoding: UTF-8]
+accerciser.schemas.in
 plugins/interface_view.glade
 plugins/interface_view.py
 plugins/event_monitor.glade
