@@ -1,3 +1,11 @@
+2007-04-11 Eitan Isaacson  <eitan@ascender.com>
+
+	* Makefile.am: Fixed a few things that broke distcheck.
+	* accerciser.schemas.in: Added, o allow translation.
+	* accerciser.schemas: Removed.
+	* help/C/accerciser.xml: Fixed some errors.
+	* po/POTFILES.in: Added schema file for translation.
+	
 2007-04-10 Eitan Isaacson  <eitan@ascender.com>
 
 	* Makefile.am:
